HTML further structure

--- a/index.html
+++ b/index.html
@@ -9,21 +9,51 @@
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>My Website Style Guide</h1>
     </header>
     <main>
         <section>
+            <h2>Colors</h2>
+            <div>
 
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+                
+            </div>
         </section>
         <section>
+            <h2>Fonts</h2>
+            <div>
 
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
         </section>
         <section>
+            <h2>Text Styles</h2>
+            <div>
 
+            </div>
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
