--- a/index.html
+++ b/index.html
@@ -14,23 +14,17 @@
     <main>
         <section>
             <h2>Colors</h2>
-            <div>
+            <div class="colors" id="ocean">
 
             </div>
-            <div>
+            <div class="colors" id="blueish">
 
             </div>
-            <div>
+            <div class="colors" id="purpleish">
 
             </div>
-            <div>
+            <div class="colors" id="radiant-pink">
 
-            </div>
-            <div>
-
-            </div>
-            <div>
-                
             </div>
         </section>
         <section>
