Colors section done

--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
     </header>
     <main>
         <section>
-
             <h2>Colors</h2>
             <div class="colors" id="ocean">
-
+                <p>Ocean</p>
+                <p>#246BBD</p>
             </div>
             <div class="colors" id="blueish">
-
+                <p>Blueish</p>
+                <p>#2924BD</p>
             </div>
             <div class="colors" id="purpleish">
-
+                <p>Purpleish</p>
+                <p>#7624BD</p>
             </div>
             <div class="colors" id="radiant-pink">
-
+                <p>Radiant Pink</p>
+                <p>#BD24B8</p>
             </div>
-    
         </section>
         <section>
             <h2>Fonts</h2>
