--- a/index.html
+++ b/index.html
@@ -14,33 +14,42 @@
     <main>
         <section>
             <h2>Colors</h2>
-            <div class="colors" id="ocean">
+            <div class="palette" id="ocean">
                 <p>Ocean</p>
                 <p>#246BBD</p>
             </div>
-            <div class="colors" id="blueish">
+            <div class="palette" id="blueish">
                 <p>Blueish</p>
                 <p>#2924BD</p>
             </div>
-            <div class="colors" id="purpleish">
+            <div class="palette" id="purpleish">
                 <p>Purpleish</p>
                 <p>#7624BD</p>
             </div>
-            <div class="colors" id="radiant-pink">
+            <div class="palette" id="radiant-pink">
                 <p>Radiant Pink</p>
                 <p>#BD24B8</p>
             </div>
         </section>
-        <section>
+        <section id="fonts">
             <h2>Fonts</h2>
-            <div>
-
+            <div id="merriweather">
+                <h3>Merriweather</h3>
+                <p class="normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div>
-
+            <div id="roboto">
+                <h3>Roboto</h3>
+                <p class="normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div>
-
+            <div id="roboto-mono">
+                <h3>Roboto Mono</h3>
+                <p class="normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </section>
         <section>
