Fonts section structure added

--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
     <main>
         <section>
             <h2>Colors</h2>
-            <div class="palette" id="ocean">
+            <div class="colors" id="ocean">
                 <p>Ocean</p>
                 <p>#246BBD</p>
             </div>
-            <div class="palette" id="blueish">
+            <div class="colors" id="blueish">
                 <p>Blueish</p>
                 <p>#2924BD</p>
             </div>
-            <div class="palette" id="purpleish">
+            <div class="colors" id="purpleish">
                 <p>Purpleish</p>
                 <p>#7624BD</p>
             </div>
-            <div class="palette" id="radiant-pink">
+            <div class="colors" id="radiant-pink">
                 <p>Radiant Pink</p>
                 <p>#BD24B8</p>
             </div>
         </section>
-        <section id="fonts">
+        <section>
             <h2>Fonts</h2>
-            <div id="merriweather">
+            <div class="fonts" id="merriweather">
                 <h3>Merriweather</h3>
                 <p class="normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div id="roboto">
+            <div class="fonts" id="roboto">
                 <h3>Roboto</h3>
                 <p class="normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div id="roboto-mono">
+            <div class="fonts" id="roboto-mono">
                 <h3>Roboto Mono</h3>
                 <p class="normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <p class="bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
