--- a/index.html
+++ b/index.html
@@ -54,13 +54,28 @@
         </section>
         <section>
             <h2>Text Styles</h2>
-            <div>
+            <div id="text-styles">
+                <h1>H1: Main Page heading</h1>
+                <ul>
+                    <li>font-family: Merriweather</li>
+                    <li>font-weight: 700</li>
+                    <li>font-size: 40px</li>
+                </ul>
+                <h2>H2: Subheading</h2>
+                <ul>
+                    <li>font-family: Roboto</li>
+                    <li>font-weight: 700</li>
+                    <li>font-size: 30px</li>
+                </ul>
+                <p>P: Paragraph text</p>
+                <ul>
+                    <li>font-family: Roboto Mono</li>
+                    <li>font-weight: 400</li>
+                    <li>font-size: 18px</li>
+                </ul>
 
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
